--- a/index.html
+++ b/index.html
@@ -359,8 +359,58 @@
                 </div>
             </div>
         </div>
+
+        <!-- Images Section -->
+        <div class="row mt-5 text-center">
+            <div class="col-md-6">
+                <a href="#" data-bs-toggle="modal" data-bs-target="#acknowledgmentModal">
+                    <img src="podyaka.png" alt="Acknowledgment Image" class="img-fluid rounded shadow-lg mb-3">
+                </a>
+                <p class="fs-6">Підтвердження участі</p>
+            </div>
+            <div class="col-md-6">
+                <a href="#" data-bs-toggle="modal" data-bs-target="#diplomaModal">
+                    <img src="diplom.png" alt="Diploma Image" class="img-fluid rounded shadow-lg mb-3">
+                </a>
+                <p class="fs-6">Диплом за участь</p>
+            </div>
+        </div>
+    </div>
+
+    <!-- Acknowledgment Modal -->
+    <div class="modal fade" id="acknowledgmentModal" tabindex="-1" aria-labelledby="acknowledgmentModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="acknowledgmentModalLabel">Підтвердження участі</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="podyaka.png" alt="Acknowledgment Image" class="img-fluid rounded">
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Diploma Modal -->
+    <div class="modal fade" id="diplomaModal" tabindex="-1" aria-labelledby="diplomaModalLabel" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered modal-lg">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="diplomaModalLabel">Диплом за участь</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <img src="diplom.png" alt="Diploma Image" class="img-fluid rounded">
+                </div>
+            </div>
+        </div>
     </div>
 </section>
+
+<!-- Include Bootstrap JS -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+
 
 <!-- Footer -->
 <footer class="footer bg-dark text-white text-center py-4">
