--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <a class="nav-link" href="#goals">Цілі та мета</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#genres">Жанри</a>
+                    <a class="nav-link" href="#nominations">Номінації</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#age-categories">Вікові категорії</a>
