--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <div class="container">
-        <a class="navbar-brand" href="#">🎨 Гармонія Мистецтва</a>
+        <a class="navbar-brand d-flex align-items-center" href="#">
+            <img src="logo.png" alt="Logo" style="width: 40px; height: 40px; margin-right: 10px;"> 
+            Простір талантів
+        </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -42,29 +45,58 @@
 </nav>
 
 <!-- Hero Section -->
-<section class="hero-section text-center text-white d-flex align-items-center">
+<section class="hero-section text-center text-white d-flex align-items-center" style="height: 80vh; background: linear-gradient(135deg, #FFDEE9 0%, #B5FFFC 100%);">
     <div class="container">
-        <h1 class="display-3 fw-bold">Фестиваль-Конкурс «Гармонія Мистецтва» 🎉</h1>
-        <p class="lead mt-4 fs-4">Запрошуємо всіх бажаючих взяти участь у всеукраїнському фестивалі мистецтв, де зустрічаються таланти та творчість!</p>
-        <a href="#participation" class="btn btn-outline-light btn-lg mt-4 px-5 py-3">Взяти участь 🚀</a>
+        <h1 class="display-2 fw-bold text-dark">Фестиваль-Конкурс «Гармонія Мистецтва» 🎉</h1>
+        <p class="lead mt-4 fs-3 text-dark">Запрошуємо всіх бажаючих взяти участь у всеукраїнському фестивалі мистецтв, де зустрічаються таланти та творчість!</p>
+        <a href="#participation" class="btn btn-outline-light btn-lg mt-4 px-5 py-3 rounded-pill" style="background-color: red; border-color: #FF69B4; color: white; transition: background-color 0.3s, color 0.3s;">Взяти участь 🚀</a>
     </div>
 </section>
 
+
+
+
 <!-- About Section -->
-<section id="about" class="py-5 about-section">
+<section id="about" class="py-5 about-section" style="background: linear-gradient(135deg, #f8f9fa 50%, #e3f2fd 50%);">
     <div class="container">
         <h2 class="text-center mb-4 fs-2">Про фестиваль 📜</h2>
         <div class="row align-items-center">
-            <div class="col-md-6">
-                <img src="https://via.placeholder.com/500x300" alt="Festival Image" class="img-fluid rounded shadow-lg">
+            <div class="col-lg-6">
+                <div class="pe-lg-5">
+                    <p class="fs-4 mb-4">
+                        <b>Фестиваль-Конкурс «Гармонія Мистецтва»</b> — це публічний, відкритий суспільно корисний конкурс, який проводиться 21-23 вересня 2024 року. Захід має на меті популяризацію української культури та виявлення нових талантів серед дітей та молоді. Заявки приймаються до 20 вересня включно.
+                    </p>
+                    <p class="fs-4">
+                        Організатором заходу є <b>Організаційний комітет «ARTPROSTIP» ПРОСТІР ТАЛАНТІВ Світ Зіркової Творчості.</b>
+                    </p>
+                </div>
             </div>
-            <div class="col-md-6">
-                <p class="fs-5"><b>Фестиваль-Конкурс «Гармонія Мистецтва» </b> — це публічний, відкритий суспільно корисний конкурс, який проводиться 21-23 вересня 2024 року. Захід має на меті популяризацію української культури та виявлення нових талантів серед дітей та молоді. Заявки приймаються до 20 вересня включно.</p>
-                <p class="fs-5">Організатором заходу є <b>Організаційний комітет «ARTPROSTIP» ПРОСТІР ТАЛАНТІВ Світ Зіркової Творчості. </b></p>
+            <div class="col-lg-6">
+                <div class="d-flex flex-wrap justify-content-around text-center">
+                    <div class="p-3">
+                        <i class="bi bi-people fs-1 text-primary"></i>
+                        <p class="mt-2 fs-5 fw-bold">Громадська подія</p>
+                    </div>
+                    <div class="p-3">
+                        <i class="bi bi-music-note-list fs-1 text-success"></i>
+                        <p class="mt-2 fs-5 fw-bold">Музика та мистецтво</p>
+                    </div>
+                    <div class="p-3">
+                        <i class="bi bi-award fs-1 text-warning"></i>
+                        <p class="mt-2 fs-5 fw-bold">Визнання талантів</p>
+                    </div>
+                    <div class="p-3">
+                        <i class="bi bi-calendar-event fs-1 text-danger"></i>
+                        <p class="mt-2 fs-5 fw-bold"> 21-23 вересня 2024</p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
 </section>
+
+
+
 
 <!-- Goals Section -->
 <section id="goals" class="py-5 goals-section">
