--- a/index.html
+++ b/index.html
@@ -398,13 +398,11 @@
                 <a href="#" data-bs-toggle="modal" data-bs-target="#acknowledgmentModal">
                     <img src="podyaka.png" alt="Acknowledgment Image" class="img-fluid rounded shadow-lg mb-3">
                 </a>
-                <p class="fs-6">Підтвердження участі</p>
             </div>
             <div class="col-md-6">
                 <a href="#" data-bs-toggle="modal" data-bs-target="#diplomaModal">
                     <img src="diplom.png" alt="Diploma Image" class="img-fluid rounded shadow-lg mb-3">
                 </a>
-                <p class="fs-6">Диплом за участь</p>
             </div>
         </div>
     </div>
@@ -414,7 +412,7 @@
         <div class="modal-dialog modal-dialog-centered modal-lg">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="acknowledgmentModalLabel">Підтвердження участі</h5>
+                    <h5 class="modal-title" id="acknowledgmentModalLabel">Подяка</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
